--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -22,6 +22,19 @@
      <widget class="myGlWidget" name="yuvWidget"/>
     </item>
    </layout>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>233</x>
+      <y>50</y>
+      <width>100</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
+   </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
@@ -38,8 +51,26 @@
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="labe2">
+    <property name="geometry">
+     <rect>
+      <x>610</x>
+      <y>310</y>
+      <width>171</width>
+      <height>421</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/img/leftbdistanceguid.png);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
    <zorder>yuvWidget</zorder>
    <zorder>label</zorder>
+   <zorder>labe2</zorder>
+   <zorder>pushButton</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
